<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignalStrengthMapper" >

    <TextView
        android:id="@+id/operatorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/operator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/operatorLabel"
        android:layout_below="@id/operatorLabel"
        android:layout_marginTop="24dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/signalStrengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/operator"
        android:layout_below="@id/operator"
        android:layout_marginTop="31dp"
        android:text="@string/signal_strength"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/signalStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/signalStrengthLabel"
        android:layout_below="@id/signalStrengthLabel"
        android:layout_marginTop="24dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bitErrorRateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/signalStrength"
        android:layout_below="@id/signalStrength"
        android:layout_marginTop="31dp"
        android:text="@string/bit_error_rate"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/bitErrorRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/bitErrorRateLabel"
        android:layout_below="@id/bitErrorRateLabel"
        android:layout_marginTop="24dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/gpsCoordinatesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/bitErrorRate"
        android:layout_below="@id/bitErrorRate"
        android:layout_marginTop="31dp"
        android:text="@string/gps_coordinates"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/gpsCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/gpsCoordinatesLabel"
        android:layout_below="@id/gpsCoordinatesLabel"
        android:layout_marginTop="24dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/gpsCoordinates"
        android:layout_below="@id/gpsCoordinates"
        android:layout_marginTop="31dp"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/locationLabel"
        android:layout_below="@id/locationLabel"
        android:layout_marginTop="24dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>